[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leanvox"
version = "0.2.0"
description = "Official Python SDK for the Leanvox TTS API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Leanvox", email = "junowest@proton.me" }]
keywords = ["tts", "text-to-speech", "leanvox", "voice", "audio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
    "tomli>=1.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "respx>=0.20", "mypy>=1.0"]

[project.urls]
Homepage = "https://leanvox.com"
Documentation = "https://leanvox.com/docs"
Repository = "https://github.com/leanvox/leanvox-python"
Issues = "https://github.com/leanvox/leanvox-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/leanvox"]
